[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes2/playing_field/PlayingField.gd" type="Script" id=1]
[ext_resource path="res://spoilers/images2/playing-field-background.png" type="Texture" id=2]
[ext_resource path="res://scenes2/playing_field/InversionButtons.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes2/playing_field/Cells.tscn" type="PackedScene" id=4]

[node name="PlayingField" type="CenterContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )

[node name="FieldBackground" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="InversionButtons" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 212.0
margin_right = 812.0

[node name="Cells" parent="." index="2" instance=ExtResource( 4 )]

margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 500.0

[connection signal="inversion_requested" from="InversionButtons" to="." method="_on_InversionButtons_inversion_requested"]

[connection signal="mouse_entered_to" from="InversionButtons" to="." method="_on_InversionButtons_mouse_entered_to"]

[connection signal="mouse_exited_from" from="InversionButtons" to="." method="_on_InversionButtons_mouse_exited_from"]

[connection signal="cell_pressed" from="Cells" to="." method="_on_Cells_cell_pressed"]


